# software

./: .env  .envrc  .gitignore  .gitmodules  .starship.toml  CONTRIBUTING.md  CONTROL_STATION_COMPLETE_ARCHITECTURE.md  DEVELOPMENT.md  FINAL_WORKING_ARCHITECTURE.md  Makefile  PacketGenerator.go  README.md  SIMPLE_DEV_MODE.md  SMART_SERVER_MANAGEMENT.md  UNIFIED_PORT_SYSTEM.md  control-station.bat  control-station.sh  dist.rar  docker-compose.dev.yml  go.mod  go.sum  go.work  go.work.sum  hyperloop-upv-common-front-1.0.8.tgz  index.html  load-secret.sh  main.go  package-lock.json  package.json  pod_navigation.md  shell.nix  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1686151110194-02c6462c6c2bc.mjs  vite.config.ts.timestamp-1687993970618-5117fa2bce021.mjs
backend/: .gitignore  go.mod  (+6 more)
packet-sender/: .env  .gitignore  Cargo.toml  PACKET_SENDER_DOCS.md  PacketGenerator.go  RANDOM_FEATURE.md  README.md  debug_hvscu.sh  go.mod  go.sum  main.go  packet_selector.go  packet_sender.go  test_final.sh  test_manual.sh  test_packet_sender.sh  test_ranges.py  test_simple.sh  test_with_listener.sh
packet-sender/adj/: boards.json  general_info.json
packet-sender/cmd/: interactive.go  list.go  root.go  run.go  send.go
packet-sender/internal/common/: types.go
packet-sender/internal/logger/: logger.go
packet-sender/internal/monitor/: monitor.go
packet-sender/internal/simulator/: board.go  data_generator.go  order_generator.go  protection_generator.go  state_generator.go
packet-sender/internal/utils/: adj.go  file.go
packet-sender/src/: main.rs  test_listener.rs
(+1908 files in other folders)
