[package]
name = "packet-sender-rs"
version = "0.1.0"
edition = "2021"
authors = ["Hyperloop UPV Team"]
description = "Network packet sender for testing Hyperloop backend and frontend"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.5"

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random generation
rand = "0.8"

# Time handling
chrono = "0.4"

# System calls (for macOS socket configuration)
libc = "0.2"

# Optional TUI
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }

[features]
default = []
tui = ["ratatui", "crossterm"]

[[bin]]
name = "packet-sender"
path = "src/main.rs"
